2023-09-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/Makefile.am (coders_bmp_la_LIBADD): BMP coder is now also
	dependent on everything that PNG coder depends on.

2023-09-23  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Emit error when OS/2 bitmap with compression BI_JPEG
	or BI_PNG is detected.

	Read files compressed with BI_PNG.

2023-09-22  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Display bitmasks into optional log.

2023-09-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/jpeg/read.t: Add test for JPEG-compressed BMP.
	Moved input reference file to PerlMagick/t/jpeg/input_JPEG.bmp and
	reference output file is
	PerlMagick/t/reference/jpeg/input_JPEG.bmp.miff.

2023-09-21  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* PerlMagick/t/input_JPEG.bmp: Added BMP sample with JPEG encoding.

	* coders/bmp.c: Only 16bpp and 32bpp is supported for BI_BITFIELDS
	compression type. 8bpp is not implemented.  This fixes oss-fuzz
	issue 62519: "graphicsmagick:coder_BMP_fuzzer:
	Use-of-uninitialized-value in WriteBMPImage".

2023-09-20  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Remove duplicity, same information has been logged
	twice.
	
	22:54:49 0:0.002746  0.000u 9688 bmp.c/ReadBMPImage/750/Coder:
	File size: Claimed=8, Actual=1129

	22:54:49 0:0.002906  0.000u 9688 bmp.c/ReadBMPImage/1105/Coder:
	File size: Claimed=8, Actual=1129

2023-09-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/{constitute.c, drawtest.c, rwblob.c, rwfile.c}: Fix GCC 13
	warning.

2023-09-19  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/tests/runtest.bat: VID is not a regular image format.
	Do not use batch test for it.

2023-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/Makefile.am (coders_bmp_la_LIBADD): The BMP coder module
	now optionally depends on libjpeg.

2023-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
