@@ -37,6 +37,14 @@
 </div>
 
 <div class="document">
+<p>2023-09-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>coders/Makefile.am (coders_bmp_la_LIBADD): Extra modules are not
+needed because the dependencies are taken care of by loading other
+modules.</p></li>
+</ul>
+</blockquote>
 <p>2023-09-23  Fojtik Jaroslav  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;yandex&#46;com">JaFojtik<span>&#64;</span>yandex<span>&#46;</span>com</a>&gt;</p>
 <blockquote>
 <ul>
